--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=myshop-backend
+server.port=8080
+
+# Database (masalan)
+spring.datasource.url=jdbc:postgresql://localhost:5432/myshop
+spring.datasource.username=postgres
+spring.datasource.password=2005
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Upload folder (project root ichida)
+upload.folder=uploads/products/
+
+# Static serving (frontend uchun)
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
+spring.mvc.static-path-pattern=/files/**
+
+# File limits
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
