--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,16 +15,16 @@ spring:
     properties:
       hibernate:
         format_sql: true
-
-  servlet:
-    multipart:
-      max-file-size: 10MB
-      max-request-size: 10MB
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 # Swagger konfiguratsiyasi
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
+    operationsSorter: method
+    tagsSorter: alpha
   api-docs:
     path: /v3/api-docs
+  default-produces-media-type: application/json
+  default-consumes-media-type: application/json
   packages-to-scan: com.myshop.myshop_backend.controller
